package br.unitins.topicosii.models;

import javax.persistence.Entity;



@Entity
public class Estado extends DefaultEntity{

	private String nome;
	private String sigla;
	public String getNome() {
		return nome;
	}
	public void setNome(String nome) {
		this.nome = nome;
	}
	public String getSigla() {
		return sigla;
	}
	public void setSigla(String sigla) {
		this.sigla = sigla;
	}
	
}
