package br.unitins.topicosii.models;

public class Pagamento {

}
