package br.unitins.topicosii.models;

public enum TIPOPIX {

}
